# ohff-teletext

./: .gitignore  README.md  pyproject.toml
samples/: 01-full-mixed.html  02-no-data.html  03-agendas-only.html  04-previous-activations-today.html  05-recent-spots-no-agendas.html  README.md
scripts/: render_samples.py
src/ohff_teletext/: __init__.py  feeds.py  main.py  page_data.py  text_format.py
systemd/: ohff-teletext.service  ohff-teletext.timer
tests/: test_page_data.py  test_text_format.py
