[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ohff-teletext"
version = "0.1.0"
description = "OHFF Flora & Fauna teletext page generator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
ohff-teletext-page = "ohff_teletext.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ohff_teletext = ["assets/*.otf"]
